k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: user-mgmt
  labels:
    app.kubernetes.io/part-of: user-mgmt-service
